name:                rotalh
version:             0.2.1
synopsis:            Get a running count of occurrences from a stream. Intended to replace `sort | uniq -c` when the input is a stream.
description:         Please see README.rst
homepage:            https://github.com/bwbaugh/rotalh
license:             AllRightsReserved
license-file:        LICENSE
author:              Wesley Baugh
maintainer:          wesley@bwbaugh.com
copyright:           2015 Wesley Baugh
category:            Console
build-type:          Simple
cabal-version:       >=1.10

executable rotalh
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >=4.8 && <4.9
                     , ansi-terminal >= 0.6.2.3
                     , unordered-containers
